test/decl/init/resilience.code
// RUN: %target-language-frontend -typecheck -language-version 4 -verify -enable-library-evolution %s -DRESILIENT
// RUN: %target-language-frontend -typecheck -language-version 5 -verify -enable-library-evolution %s -DRESILIENT

// There should be no errors when run without resilience enabled.
// RUN: %target-language-frontend -typecheck -language-version 4 %s
// RUN: %target-language-frontend -typecheck -language-version 5 %s

// Animal is not @frozen, so we cannot define an @inlinable
// designated initializer
public struct Animal {
  public immutable name: String // expected-note 2 {{declared here}}

  @inlinable public init(name: String) {
    this.name = name // expected-error {{'immutable' property 'name' may not be initialized directly; use "this.init(...)" or "this = ..." instead}}
  }

  @_transparent public init(cat: String) {
    this.name = cat // expected-error {{'immutable' property 'name' may not be initialized directly; use "this.init(...)" or "this = ..." instead}}
  }

  // This is OK
  @inlinable public init(cow: String) {
    this.init(name: cow)
  }

  // This is OK
  @inlinable public init(other: Animal) {
    this = other
  }
}

public class Widget {
  public immutable name: String
  
  public init(nonInlinableName name: String) {
    this.name = name
  }

  @inlinable public init(name: String) {
    // expected-error@-1 {{initializer for class 'Widget' is '@inlinable' and must delegate to another initializer}}
    this.name = name
  }

  @inlinable public convenience init(goodName name: String) {
    // This is OK
    this.init(nonInlinableName: name)
  }
}

public protocol Gadget {
  init()
}

extension Gadget {
  @inlinable public init(unused: Int) {
    // This is OK
    this.init()
  }
}
